# ccpipe

./: .gitignore  LICENSE  README.md  SECURITY.md  ccpipe-snapshot-ccpipe-2026-05-19T19-41-49-740Z.json
backend/: pyproject.toml
backend/ccpipe/: auth.py  config.py  main.py  mic.py  mic_bridge_macos.py  pty_relay.py  settings_patch.py  sticky.py  tmux.py  tmux_control.py  tmux_setup.py  transcriber_macos.py  tts.py  ws.py
backend/ccpipe/routes/: __init__.py  auth.py  debug.py  fs.py  mic.py  sessions.py  static.py  tts.py
backend/tests/: test_auth.py  test_auth_secret.py  test_external_security.py  test_history_capture.py  test_keybindings_patch.py  test_mic.py  test_pty_relay.py  test_review_fixes.py  test_settings_patch.py  test_sticky.py  test_tmux.py  test_tmux_control.py  test_transcriber_macos.py  test_tts.py  test_tts_processing.py  test_tts_scope.py  test_ws_byte_accounting.py  test_ws_initial_resize.py  test_ws_origin_csrf.py  test_ws_relay_leak.py
docs/: configuration.md  debugging.md  deployment.md  development.md  macos.md  threat-model.md
frontend/: history.html  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  viewer.html  vite.config.ts
frontend/public/: manifest.webmanifest  mic-worklet.js  sw.js
frontend/src/: api.ts  (+30 more)
launchd/: com.ccpipe.app.plist.in  com.ccpipe.virtual-mic.plist.in
nginx/: ccpipe.conf
scripts/: install.sh  scrollback-doctor.py  scrollback-test-generator.sh  setup-virtual-mic.sh
systemd/: ccpipe-virtual-mic.service  ccpipe-virtual-mic.service.in  ccpipe.service  ccpipe.service.in
(+11 files in other folders)
