[project]
name = "ccpipe"
version = "0.1.0"
description = "Web interface for Claude Code via tmux"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "watchdog>=5",
    "httpx>=0.27",
    "libtmux>=0.39",
    "itsdangerous>=2",   # signed session cookies via starlette.middleware.sessions
    "pyotp>=2.9",        # TOTP (RFC 6238) for optional second-factor auth
    "qrcode>=7",         # render the TOTP enrolment QR server-side (SVG, no PIL)
    "argon2-cffi>=23",   # password hashing (argon2id) for stored credentials
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests that take noticeably longer than the rest (sleeps, network)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ccpipe"]
